--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -34,8 +34,8 @@ jobs:
     - name: Log in to Docker Hub
       uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
       with:
-        username: ${{secrets.DOCKER_USERNAME }}
-        password: ${{secrets.DOCKER_PASSWORD }}
+        username: ${{DOCKER.DOCKER_USERNAME }}
+        password: ${{DOCKER.DOCKER_PASSWORD }}
 
     - name: Extract metadata (tags, labels) for Docker
       id: meta
